fix info Button is now behind select button

--- a/modules/tools/measure/style.less
+++ b/modules/tools/measure/style.less
@@ -54,6 +54,3 @@
 .table-tool-measure-delete {
     background-color: @background_color_2;
 }
-.dropdown-container{
-    display: grid;
-}
